# Skillbox-Search-Engine

search_engine/: CMakeLists.txt  README.md
search_engine/include/: converter_json.h  inverted_index.h  search_server.h
search_engine/resources/: file001.txt
search_engine/src/: converter_json.cpp  inverted_index.cpp  main.cpp  search_server.cpp
search_engine/tests/: main_tests.cpp
